--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 body {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -132,7 +136,7 @@ p {
 #title .overlay {
   position: absolute;
   width: 100%;
-  height: 120%;
+  height: 150%;
   top: 0px;
   left: 0px;
   background: #0c0808;
